<resources>
    <string name="app_name">Lunch Pals</string>

    <!--SignUpActivity-->
    <string name="signup_profile_iv_desc">Profile Image</string>
    <string name="signup_hint_email">Email Address</string>
    <string name="signup_hint_password">Password</string>
    <string name="signup_lede">Join your pals for lunch.</string>
    <string name="signup_button">Become a Lunch Pal!</string>
    <string name="signup_user_signin">Already a user? <b>sign in.</b></string>
    <string name="signup_hint_username">Username</string>
    <string name="signin_lede">Welcome back Pal!</string>
    <string name="signin_button">Sign In</string>
    <string name="signin_user_signup">Don\'t have an account? <b>Sign Up!</b></string>

</resources>
